Changelog
=========

8.2-dev - (unreleased)
----------------------

8.1 - (2013-10-04)
------------------
* Bug fix: fixed loading of whatsnewgallery tabs on data-and-maps pages
  [ichimdav #16914]
* Upgrade step: Install Palatino Linotype and Verdana fonts
  [voineali refs #16802]
* Change: move the last two items from the globalnav within the
  secundary-navigation instead of using harcoded ids
  [ichimdav refs #16878]
* Change: removed check for review state when displaying SOERKeyFacts on themes
  pages
  [ichimdav refs #9476]
* Change: changed style of keyFact in order to diferenciate it from callout
  [ichimdav refs #9476]
* Feature: Added generic PDF cover and PDF print CSS for all EEA content-types
  [voineali refs #14904]
* Bug fix: fixed CSS for IE9 for what's new tabs
  [soniaand refs #16888]

8.0 - (2013-09-23)
------------------
* Change: lowered the font-size of portletHeader from manage pages now that
  the draggable actions are displayed
  [ichimdav fixes #16720]
* Feature: added style for keyFact class
  [ichimdav refs #9476]
* Feature: Improved print.css also used by PDF generators
  [voineali refs #14904]
* Bug fix: fixed login_form redirect after upgrade to Plone 4.3
  [ichimdav #16707]
* Bug fix: fixed css warnings for IE9Fixes.css discovered by Chrome Inspector
  [ichimdav]
* Bug fix: fixed display of input fields and window size of TinyMCE popups
  [ichimdav #16661]
* Feature: presentation mode improvements
  [batradav #16728]

7.9 - (2013-09-06)
------------------
* Change: removed tinymce.xml from eea.design and moved it to
  Products.EEAPloneAdmin since most of the configurations for our packages
  are done in it
  [ichimdav #9476]
* Bug fix: fixed display of whatsnewgallery tabs for IE
  [ichimdav #16633]
* Bug fix: Display no results within folder_listing template
  if folderContents comes form faceted query and it's empty
  [voineali refs #16624]
* Bug fix: use proper class names for accordion panels in order to correctly